--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">kotlineTut</string>
-    <string-array name="months" >
+    <string-array name="months">
         <item>January</item>
         <item>February</item>
         <item>March</item>
@@ -14,4 +14,6 @@
         <item>November</item>
         <item>December</item>
     </string-array>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
