--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,9 @@
 <resources>
     <string name="app_name">kotlineTut</string>
+
+    <string name="open" >Open</string>
+    <string name="close" >Close</string>
+
     <string-array name="months">
         <item>January</item>
         <item>February</item>
@@ -14,6 +18,7 @@
         <item>November</item>
         <item>December</item>
     </string-array>
-    <!-- TODO: Remove or change this placeholder text -->
+
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
 </resources>
